fix: RestParam ctor from, RestProduce MIME, HttpMethodEnum msg + 5 depth tests, 100% JaCoCo, 3-branch CI + docs (feature/2.0.x)
* RestParam: 3/4-arg ctors now assign this.from; removed duplicate this.name in 4-arg
* RestProduce: guard empty/null mediaTypes so default wildcard {*/*} is preserved
* HttpMethodEnum.fromKey: correct error message (HttpMethodEnum, not ApiType)
* surefire argLine: prefix with @{argLine} so jacoco prepare-agent injects javaagent
* 5 new depth test classes (121 tests total, 0 missed instructions, 100% coverage):
  - EndpointApiInvocationTest (7), AnnotationInheritanceTest (7)
  - EndpointAnnotationReflectionTest (8), HttpEnumExhaustiveTest (16)
  - RestDescriptorBoundaryTest (20)
* Rewrite README.md / README.zh-CN.md as 12-section docs:
  - 6 top badges (Java 8/17/21, License, 121 tests, 100% Coverage)
  - CodeGraph analysis + 3-branch 11-row baseline matrix
  - Bug #1/#2/#3 change log + JaCoCo CSV (JDK17=376/0)
* Rewrite .github/workflows/ci.yml 3-job matrix (this branch runs the JDK17 job)